[gd_scene load_steps=2 format=3 uid="uid://tr0qiaveasii"]

[ext_resource type="Script" path="res://scripts/pause.gd" id="1_jy5i7"]

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jy5i7")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -144.5
offset_top = -128.0
offset_right = 144.5
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2

[node name="Main" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = -104.5
offset_right = 109.0
offset_bottom = 104.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Title" type="Label" parent="Panel/Main"]
layout_mode = 2
theme_override_font_sizes/font_size = 62
text = "Paused"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="Panel/Main"]
layout_mode = 2
size_flags_horizontal = 4
text = "Resume"

[node name="Volume" type="HBoxContainer" parent="Panel/Main"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/Main/Volume"]
layout_mode = 2
text = "Volume     "
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSlider" type="HSlider" parent="Panel/Main/Volume"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
value = 100.0
rounded = true
ticks_on_borders = true

[node name="ExitGame" type="Button" parent="Panel/Main"]
layout_mode = 2
size_flags_horizontal = 4
text = "Exit To Menu"

[connection signal="pressed" from="Panel/Main/Resume" to="." method="_on_resume_pressed"]
[connection signal="value_changed" from="Panel/Main/Volume/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="Panel/Main/ExitGame" to="." method="_on_exit_game_pressed"]
